--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -11,16 +11,32 @@
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-.clock > span {
+.clock span {
     display: flex;
     justify-content: space-between;
 }
 
+.clock p {
+    margin: 0;
+}
+
+.epochText {
+    font-size: 25px;
+    padding-bottom: 10px;
+}
+
 .reset {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: #fff;
     border: 0;
     margin-left: 10px;
 }
 
+.speedText {
+    width: 75px;
+}
+
+.speedInput {
+    width: calc(100% - 75px);
+}
