--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -3,12 +3,12 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
-    width: 300px;
     padding: 20px;
-    background-color: rgba(0, 0, 0, .8);
+    width: var(--sidebar-width);
+    height: var(--clock-height);
+    background-color: var(--sidebar-bg);
     color: #fff;
     font-size: 20px;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .clock span {
