--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 * {
     box-sizing: border-box;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
 }
 
 html, body {
