move clock and state to home component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-    --sidebar-bg: rgba(0, 0, 0, .7);
+    --sidebar-bg: #000;
     --sidebar-width: 400px;
     --clock-height: 100px;
     --camera-height: 200px;
