--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -1,19 +1,44 @@
 .catalog {
-    position: relative;
+    position: absolute;
+    right: 0;
+    bottom: 0;
     z-index: 2;
-    width: var(--sidebar-width);
-    height: calc(100vh - var(--clock-height) - var(--camera-height));
-    background-color: var(--sidebar-bg);
+    width: calc(100% - var(--clock-width));
+    height: var(--catalog-height);
+    background-color: var(--control-bg);
+    visibility: hidden;
+}
+
+.catalog span > * {
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.catalog p {
+    margin: 0;
 }
 
 .labels {
+    height: 50px;
     display: flex;
-    justify-content: space-around;
-    font-size: 16px;
-    border: solid #fff;
-    border-width: 1px 0;
+    font-size: 18px;
+    border-bottom: 1px solid #fff;
 }
 
-.labels > div {
-    padding: 15px;
+.list {
+    display: flex;
+    flex-direction: column;
+    height: calc(var(--catalog-height) - 50px);
+    overflow-y: scroll;
+    font-size: 16px;
 }
+
+.listItem {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px;
+}
+
