--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -6,11 +6,15 @@
     width: calc(100% - var(--clock-width));
     height: var(--catalog-height);
     background-color: var(--control-bg);
-    visibility: hidden;
+}
+
+.catalog button {
+    background: transparent;
+    border: none;
+    font-size: 20px;
 }
 
 .catalog span > * {
-    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,6 +31,16 @@
     border-bottom: 1px solid #fff;
 }
 
+.labelLarge {
+    width: 25%;
+    max-width: 250px;
+}
+
+.labelSmall {
+    width: 12.5%;
+    max-width: 50px;
+}
+
 .list {
     display: flex;
     flex-direction: column;
@@ -37,8 +51,18 @@
 
 .listItem {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    margin: 10px;
+    margin: 10px 0;
 }
 
+.inactive * {
+    color: #444;
+}
+
+.unselected * {
+    color: #999;
+}
+
+.unselected:hover * {
+    color: #ddd;
+}
