--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -5,16 +5,18 @@
     z-index: 2;
     display: flex;
     flex-direction: column;
-    padding: 20px;
     width: var(--clock-width);
     height: var(--clock-height);
     background-color: var(--control-bg);
     font-size: 20px;
+    padding: 5px;
 }
 
 .clock span {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin: 8px;
 }
 
 .clock p {
@@ -23,15 +25,17 @@
 
 .epochText {
     font-size: 25px;
-    padding-bottom: 10px;
 }
 
 .reset {
-    width: 25px;
-    height: 25px;
-    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    font-size: 50px;
+    background: transparent;
     border: 0;
-    margin-left: 10px;
 }
 
 .speedText {
