--- a/styles/MultiSelect.module.css
+++ b/styles/MultiSelect.module.css
@@ -1,13 +1,38 @@
+.select {
+    user-select: none;
+    display: block;
+}
+
+.select a {
+    display: flex;
+    align-items: center;
+}
+
+.select a p {
+    margin: 5px;
+}
+
 .toggle {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #f0f;
+    width: 100%;
+    height: 100%;
+    background-color: transparent
 }
 
 .list {
+    position: absolute;
     display: flex;
     flex-direction: column;
+    background-color: var(--control-bg);
+}
+
+.list p {
+    text-transform: lowercase;
+}
+
+.check {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
