--- a/styles/MultiSelect.module.css
+++ b/styles/MultiSelect.module.css
@@ -8,14 +8,14 @@
     align-items: center;
 }
 
-.select a p {
-    margin: 5px;
-}
-
 .toggle {
     width: 100%;
     height: 100%;
-    background-color: transparent
+    background-color: transparent;
+}
+
+.placeholder {
+    color: var(--placeholder-color);
 }
 
 .list {
@@ -25,8 +25,9 @@
     background-color: var(--control-bg);
 }
 
-.list p {
+.list a p {
     text-transform: lowercase;
+    margin: 5px;
 }
 
 .check {
