--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -1,8 +1,5 @@
 .clock {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 2;
+    position: relative;
     display: flex;
     flex-direction: column;
     width: var(--clock-width);
