--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,3 +4,12 @@
     display: flex;
     flex-direction: column;
 }
+
+.interface {
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
