--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,7 @@
     background-color: var(--control-bg);
     color: #fff;
     border: none;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    font-size: 25px;
 }
