--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -8,7 +8,7 @@
     max-width: 700px;
     height: var(--catalog-height);
     background-color: var(--control-bg);
-    border: solid #fff;
+    border: var(--border-style);
     border-width: 0 0 0 1px;
 }
 
@@ -31,8 +31,9 @@
 .labels {
     min-height: 50px;
     display: flex;
-    font-size: 18px;
-    border-bottom: 1px solid #fff;
+    font-size: var(--control-font-size);
+    border: var(--border-style);
+    border-width: 0 0 1px 0;
 }
 
 .labelLarge {
@@ -48,9 +49,9 @@
 .filterInput {
     width: 90px;
     height: 25px;
-    font-size: 16px;
+    font-size: var(--control-font-size);
     background-color: transparent;
-    border: solid #fff;
+    border: var(--border-style);
     border-width: 0 0 1px 0;
     margin: 10px;
     padding: 0px;
@@ -58,6 +59,8 @@
 
 .filterInput::placeholder {
     color: var(--placeholder-color);
+    text-transform: lowercase;
+    font-size: var(--control-font-size);
 }
 
 .list {
