--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
     --clock-height: 120px;
     --catalog-height: 250px;
     --placeholder-color: #777;
+    --border-style: solid #fff;
+    --control-font-size: 18px;
 }
 
 * {
