--- a/styles/MultiSelect.module.css
+++ b/styles/MultiSelect.module.css
@@ -16,6 +16,8 @@
 
 .placeholder {
     color: var(--placeholder-color);
+    text-transform: lowercase;
+    font-size: var(--control-font-size);
 }
 
 .list {
