--- a/styles/MultiSelect.module.css
+++ b/styles/MultiSelect.module.css
@@ -6,6 +6,7 @@
 .select a {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .toggle {
@@ -18,6 +19,7 @@
     color: var(--placeholder-color);
     text-transform: lowercase;
     font-size: var(--control-font-size);
+    cursor: pointer;
 }
 
 .list {
