--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');
+
 :root {
     --control-bg: rgba(0, 0, 0, .85);
     --clock-width: 300px;
@@ -11,6 +13,7 @@
 * {
     box-sizing: border-box;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     color: #fff;
 }
 
