--- a/styles/CameraControl.module.css
+++ b/styles/CameraControl.module.css
@@ -21,13 +21,13 @@
     margin: 0;
 }
 
-
 .toggle {
     background-color: #000;
     color: #fff;
     border: var(--border-style);
     border-width: 1px;
     margin-left: 10px;
+    font-size: 16px;
 }
 
 .toggle a {
