--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -5,7 +5,7 @@
 .catalog {
     position: relative;
     width: calc(100% - var(--clock-width));
-    max-width: 700px;
+    width: 700px;
     height: var(--catalog-height);
     background-color: var(--control-bg);
     border: var(--border-style);
