--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+.invisible {
+    visibility: hidden;
+}
+
 .catalog {
     position: relative;
     width: calc(100% - var(--clock-width));
@@ -16,6 +20,8 @@
     background: transparent;
     border: none;
     font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 .catalog span > * {
@@ -38,8 +44,10 @@
 
 .labelLarge {
     width: 30%;
+    display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
 }
 
@@ -47,21 +55,35 @@
     width: 10%;
 }
 
+.inputWrap {
+    margin: 5px;
+    border: var(--border-style);
+    border-width: 0 0 1px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
 .filterInput {
     width: 90px;
     height: 25px;
     font-size: var(--control-font-size);
     background-color: transparent;
-    border: var(--border-style);
-    border-width: 0 0 1px 0;
-    margin: 10px;
-    padding: 0px;
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 .filterInput::placeholder {
     color: var(--placeholder-color);
     text-transform: lowercase;
     font-size: var(--control-font-size);
+}
+
+.clearSearch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 
 .list {
@@ -79,7 +101,7 @@
 }
 
 .inactive {
-    cursor: default;
+    pointer-events: none;
 }
 
 .active {
@@ -100,4 +122,8 @@
 
 .unselected:hover * {
     color: #ddd;
+}
+
+.searchWrap {
+    display: flex;
 }
