refactor catalog css

--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -2,8 +2,20 @@
     display: none;
 }
 
-.invisible {
-    visibility: hidden;
+.catalog p {
+    margin: 0;
+}
+
+.catalog button, .catalog a {
+    cursor: pointer;
+}
+
+.catalog button {
+    background: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
 
 .catalog {
@@ -16,39 +28,25 @@
     border-width: 0 0 0 1px;
 }
 
-.catalog button {
-    background: transparent;
-    border: none;
-    font-size: 20px;
-    margin: 0;
-    padding: 0;
-}
-
-.catalog span > * {
+.catalogLabels {
+    height: 45px;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
-
-.catalog p {
-    margin: 0;
-}
-
-.labels {
-    min-height: 50px;
-    display: flex;
     font-size: var(--control-font-size);
     border: var(--border-style);
     border-width: 0 0 1px 0;
 }
 
-.labelLarge {
-    width: 30%;
+.labelSmall, .labelLarge {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+}
+
+.labelLarge {
+    width: 30%;
 }
 
 .labelSmall {
@@ -73,10 +71,49 @@
     padding: 0;
 }
 
-.filterInput::placeholder {
-    color: var(--placeholder-color);
+.filterInput::placeholder, .multiSelectPlaceholder {
+    color: #777;
     text-transform: lowercase;
     font-size: var(--control-font-size);
+}
+
+.multiSelect {
+    user-select: none;
+    display: block;
+}
+
+.multiSelectToggle {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+.selectList {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--control-bg);
+    padding: 0 5px;
+}
+
+.selectItem {
+    display: flex;
+    align-items: center;
+    text-transform: lowercase;
+}
+
+.selectItem * {
+    font-size: 16px;
+}
+
+.selectMark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
 }
 
 .clearSearch {
@@ -86,44 +123,45 @@
     font-size: 20px;
 }
 
-.list {
-    display: flex;
-    flex-direction: column;
-    height: calc(var(--catalog-height) - 50px);
+.clearSearchHidden {
+    visibility: hidden;
+}
+
+.catalogList{
+    height: calc(var(--catalog-height) - 45px);
     overflow-y: scroll;
+}
+
+.catalogItem {
+    display: flex;
+    align-items: center;
+    margin: 12px 0 0 0;
+}
+
+.pageControls {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    margin: 5px;
+}
+
+.pageArrow * {
     font-size: 16px;
 }
 
-.listItem {
-    display: flex;
-    align-items: center;
-    margin: 8px 0;
-}
-
-.inactive {
+.followSelected, .clearInactive {
     pointer-events: none;
 }
 
-.active {
-    cursor: pointer;
+.clearActive:hover *, .followUnselected:hover * {
+    color: #ccc;
 }
 
-.inactive * {
+.followUnselected * {
+    color: #888;
+}
+
+.clearInactive * {
     color: #444;
-}
-
-.unselected {
-    cursor: pointer;
-}
-
-.unselected * {
-    color: #999;
-}
-
-.unselected:hover * {
-    color: #ddd;
-}
-
-.searchWrap {
-    display: flex;
 }
