--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,10 +6,10 @@
 }
 
 .interface {
-    position: absolute;
-    z-index: 2;
     display: flex;
     flex-wrap: wrap;
+    position: absolute;
+    z-index: 2;
     bottom: 0;
     left: 0;
     width: fit-content;
@@ -20,14 +20,14 @@
     width: 100%;
 }
 
-.collapse {
+.collapseButton {
     position: absolute;
     bottom: 0;
-    background-color: var(--control-bg);
-    color: #fff;
-    border: none;
     width: 40px;
     height: 40px;
     font-size: 20px;
-    border: 
+    background-color: var(--control-bg);
+    color: #fff;
+    border: none;
+    cursor: pointer;
 }
