--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -93,6 +93,7 @@
     flex-direction: column;
     background-color: var(--control-bg);
     padding: 0 5px;
+    -webkit-transform:translate3d(0,0,0);
 }
 
 .selectItem {
