ensure opaque placeholders

--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -70,6 +70,7 @@
 
 .filterInput::placeholder, .multiSelectPlaceholder {
     color: #777;
+    opacity: 1;
     text-transform: lowercase;
     font-size: var(--control-font-size);
 }
