--- a/styles/Visualization.module.css
+++ b/styles/Visualization.module.css
@@ -3,7 +3,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    bottom: 0;
+    right: 0;
     touch-action: pinch-zoom;
 }
