size canvas in js

--- a/styles/Visualization.module.css
+++ b/styles/Visualization.module.css
@@ -1,9 +1,7 @@
 .vis {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
     touch-action: pinch-zoom;
 }
