Revert "size canvas in js"
This reverts commit 948bcf8e49d06f867c8dceac86d4e72afe95f6a9.

--- a/styles/Visualization.module.css
+++ b/styles/Visualization.module.css
@@ -1,7 +1,9 @@
 .vis {
-    position: fixed;
+    position: absolute;
     z-index: 1;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     touch-action: pinch-zoom;
 }
