--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,6 +3,9 @@
 }
 
 .home {
+    position: absolute;
+    bottom: 0;
+    left: 0;
     background-color: #000;
     display: flex;
     flex-direction: column;
