--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,15 +6,16 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    right: 0;
     background-color: #000;
     display: flex;
     flex-direction: column;
 }
 
 .interface {
+    position: absolute;
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
     z-index: 2;
     bottom: 0;
     left: 0;
