--- a/styles/Visualization.module.css
+++ b/styles/Visualization.module.css
@@ -1,9 +1,7 @@
 .vis {
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
     touch-action: none;
 }
