--- a/styles/CameraControl.module.css
+++ b/styles/CameraControl.module.css
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: var(--control-font-size);
+    font-size: var(--font-size);
     height: 50%;
 }
 
@@ -36,6 +36,7 @@
     text-transform: lowercase;
     cursor: pointer;
     padding: 8px;
+    font-size: var(--font-size);
     min-width: 80px;
     text-align: center;
 }
