--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -11,7 +11,7 @@
     border: none;
     margin: 0;
     padding: 0;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .catalog {
@@ -28,7 +28,7 @@
     height: 45px;
     display: flex;
     align-items: center;
-    font-size: var(--control-font-size);
+    font-size: var(--font-size);
     border: var(--border-style);
     border-width: 0 0 1px 0;
 }
@@ -61,7 +61,7 @@
 .filterInput {
     width: 90px;
     height: 25px;
-    font-size: var(--control-font-size);
+    font-size: var(--font-size);
     background-color: transparent;
     border: none;
     margin: 0;
@@ -72,7 +72,7 @@
     color: #777;
     opacity: 1;
     text-transform: lowercase;
-    font-size: var(--control-font-size);
+    font-size: var(--font-size);
 }
 
 .multiSelect {
@@ -135,13 +135,14 @@
     display: flex;
     align-items: center;
     margin: 12px 0 0 0;
+    font-size: var(--font-size);
 }
 
 .pageControls {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 14px;
+    font-size: 13px;
     margin: 5px;
 }
 
