--- a/styles/CameraControl.module.css
+++ b/styles/CameraControl.module.css
@@ -5,6 +5,7 @@
 .camControl {
     position: relative;
     width: var(--clock-width);
+    max-width: 100vw;
     height: calc(var(--catalog-height) - var(--clock-height));
     background-color: var(--control-bg);
     border: var(--border-style);
@@ -47,6 +48,12 @@
 }
 
 @media (max-width: 900px) {
+    .camControl {
+        border-width: 0 0 0 1px;
+    }
+}
+
+@media (max-width: 600px) {
     .camControl {
         border-width: 1px 0;
     }
