--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -166,15 +166,19 @@
     color: #444;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 900px) and (min-width: 600px) {
     .catalog {
-        border: none;
+        border-width: 1px 0 0 0 ;
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 600px) {
     .labelLarge {
         flex-direction: column;
+    }
+
+    .catalog {
+        border-width: 0;
     }
 
     .catalogLabels {
