--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     width: var(--clock-width);
+    max-width: 100vw;
     height: var(--clock-height);
     background-color: var(--control-bg);
     padding: 10px;
