--- a/styles/Catalog.module.css
+++ b/styles/Catalog.module.css
@@ -27,6 +27,7 @@
 .catalogLabels {
     height: 45px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     font-size: var(--font-size);
     border: var(--border-style);
@@ -51,7 +52,7 @@
 }
 
 .inputWrap {
-    margin: 5px;
+    margin: 0 0 0 5px;
     border: var(--border-style);
     border-width: 0 0 1px 0;
     display: flex;
@@ -59,7 +60,7 @@
 }
 
 .filterInput {
-    width: 90px;
+    width: 80px;
     height: 25px;
     font-size: var(--font-size);
     background-color: transparent;
@@ -119,7 +120,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
 }
 
 .clearSearchHidden {
@@ -166,13 +166,13 @@
     color: #444;
 }
 
-@media (max-width: 900px) and (min-width: 600px) {
+@media (max-width: 810px) and (min-width: 540px) {
     .catalog {
         border-width: 1px 0 0 0 ;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 540px) {
     .labelLarge {
         flex-direction: column;
     }
@@ -187,5 +187,11 @@
 
     .catalogList {
         height: calc(var(--catalog-height) - 70px);
+    }
+}
+
+@media (max-width: 810px) and (max-height: 400px) {
+    .catalog {
+        display: none;
     }
 }
