--- a/styles/Clock.module.css
+++ b/styles/Clock.module.css
@@ -21,9 +21,8 @@
 }
 
 .resetEpoch {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-content: center;
     width: 40px;
     height: 40px;
     font-size: 25px;
